--- a/projects/table/src/lib/table.component.html
+++ b/projects/table/src/lib/table.component.html
@@ -136,7 +136,7 @@
                                 <i class="icon-menu"></i>
                             </button>
 
-                            <mat-menu #menu="matMenu" class="float-menu" xPosition="before" yPosition="below">
+                            <mat-menu #menu="matMenu" class="halo-table-menu" xPosition="before" yPosition="below">
                                 <button mat-menu-item *ngFor="let rowMenuItem of rowMenuItems" (click)="rowMenuAction(rowMenuItem.id, row, rowIndex)">
                                     <span>{{rowMenuItem.caption}}</span>
                                 </button>
@@ -165,7 +165,7 @@
 
     <div #loading class="halo-table-loading" [class.halo-table-hidden]="!isLoadingState">
 
-        <halo-loading></halo-loading>
+        <halo-loading-animation></halo-loading-animation>
 
     </div>
 
