--- a/projects/table/src/lib/styles/variables.scss
+++ b/projects/table/src/lib/styles/variables.scss
@@ -3,6 +3,7 @@ $whiteColor: #ffffff;
 $darkBlueColor: #00167c;
 $blueColor: #0c59ff;
 $purpleColor: #868dbb;
+$lightPurpleColor: #c9cfe1;
 $grayColor: #c5cad9;
 
 $bgColor: #e5eaf6;
